--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <div class="container">
 <nav class="navbar navbar-default" role="navigation">
 <!-- Brand and toggle get grouped for better mobile display -->
+<Музыка, Фигня>
 <!-- Collect the nav links, forms, and other content for toggling - <div class="navbar-header">
 <button type="button" class="navbar-toggle" data-toggle="collapse" data- target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar">< /span> <span class="icon-bar"></span> </button>
 <h1 class="navbar-brand"><a href="index.html"> <span>SCILL</span></a></h1
